graylog-terraform/network/subnets.tf
resource "aws_subnet" "public" {
  count = length(var.public_subnets)
  vpc_id            = aws_vpc.graylog.id
  cidr_block        = var.public_subnets[count.index]
  map_public_ip_on_launch = true
}

resource "aws_subnet" "private" {
  count = length(var.private_subnets)
  vpc_id     = aws_vpc.graylog.id
  cidr_block = var.private_subnets[count.index]
}
